--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 ПродAI: Мультимодальный Автозаполнитель
             </h1>
             <p class="text-lg md:text-xl text-slate-500 mb-10 max-w-2xl mx-auto leading-relaxed animate-fade-in-up" style="animation-delay: 200ms;">
-                Новая парадигма подачи объявлений на Avito. «Снимай и Говори» — сокращаем Time-to-List до 2 минут.
+                Новая парадигма подачи объявлений на Avito. «Снимай и Говори» — сокращаем Time-to-List до 1 минуты.
             </p>
             <div class="flex flex-col sm:flex-row justify-center gap-4 animate-fade-in-up" style="animation-delay: 300ms;">
                 <a href="#solution" class="px-8 py-3 bg-avito-blue hover:bg-blue-600 text-white font-semibold rounded-lg shadow-lg hover:shadow-xl transition-all transform hover:-translate-y-0.5">
@@ -128,7 +128,7 @@
                 <div class="p-4 border-b border-slate-100 flex justify-between items-center bg-slate-50/70 shrink-0">
                     <h3 class="font-bold text-slate-800 flex items-center gap-2">
                         <i data-lucide="sparkles" class="text-avito-blue w-5 h-5"></i>
-                        Демо ПродAI: Категория «Авто»
+                        Демо ПродAI: Продажа Кроссовок
                     </h3>
                     <button id="close-modal" class="p-1 rounded-full text-slate-400 hover:text-slate-700 hover:bg-slate-200/60 transition-colors">
                         <i data-lucide="x" class="w-5 h-5"></i>
@@ -142,12 +142,12 @@
                         <div id="step-upload" class="">
                             <div class="w-full aspect-[4/3] bg-slate-100 border-2 border-dashed border-slate-300 rounded-xl flex flex-col items-center justify-center cursor-pointer hover:border-avito-blue hover:bg-blue-50/50 transition-all group" id="upload-trigger">
                                 <div class="relative mb-3 h-20 w-32">
-                                    <img src="https://placehold.co/300x200/e2e8f0/64748b/png?text=Car" alt="Car photo" class="absolute left-0 top-0 w-24 h-auto rounded-lg shadow-md transition-transform duration-300 group-hover:rotate-[-6deg] group-hover:scale-105">
+                                    <img src="https://placehold.co/300x200/e2e8f0/64748b/png?text=Sneakers" alt="Sneakers photo" class="absolute left-0 top-0 w-24 h-auto rounded-lg shadow-md transition-transform duration-300 group-hover:rotate-[-6deg] group-hover:scale-105">
                                     <img src="https://placehold.co/300x200/e2e8f0/64748b/png?text=Wave" alt="Voice wave" class="absolute right-0 bottom-0 w-20 h-auto rounded-lg shadow-md transition-transform duration-300 group-hover:rotate-[4deg] group-hover:scale-105">
                                 </div>
                                 <span class="text-base text-slate-500 group-hover:text-avito-blue font-semibold">Загрузить Фото + Голос</span>
                             </div>
-                            <p class="text-xs text-slate-400 text-center mt-3">Симуляция: Фото Chevrolet Cruze и голосовое описание.</p>
+                            <p class="text-xs text-slate-400 text-center mt-3">Симуляция: Фото кроссовок Nike и голосовое описание.</p>
                         </div>
 
                         <!-- Step 2: Loading -->
